assets/css/base.scss
---
---

@charset "UTF-8";
@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
@import url("//cdn.jsdelivr.net/gh/wan2land/d2coding/d2coding-full.css");
* {
  margin: 0;
  padding: 0;
  font-family: Pretendard, system-ui, sans-serif;
}

html,
body {
  height: 100%;
}

code {
  font-family: 'D2Coding', monospace;
}

a {
  text-decoration: none;
  color: #004F8F;
}

a:hover {
  color: #aaa;
}

blockquote {
  margin: 0.9375rem; /* 15px */
  padding-left: 0.9375rem; /* 15px */
  border-left: 0.125rem solid #888; /* 2px */
}

h1,
h2,
h3,
h4,
h5,
h6 {
  line-height: normal;
  margin: 0.3125rem 0; /* 5px */
  text-indent: 0;
}

h2 {
  font-size: 1.3em;
}

hr {
  margin: 0.625rem; /* 10px */
  border: 0.0625rem solid #eee; /* 1px */
}

img {
  max-width: 43.75rem; /* 700px */
}

ol,
ul {
  margin-left: 2.1875rem; /* 35px */
}

p {
  margin-bottom: 0.3125rem; /* 5px */
}

table {
  width: 100%;
}

tbody tr:hover {
  background-color: #f5f5f5;
}

td {
  padding: 0.5rem; /* 8px */
  border-bottom: 0.0625rem solid #ddd; /* 1px */
}

th {
  padding: 0.5rem; /* 8px */
  border-bottom: 0.0625rem solid #ccc; /* 1px */
  background: #f5f5f5;
}

/* Markdown reset */
a.reversefootnote {
  display: none;
}

.container-wrapper {
  width: 100%;
  margin: 0 auto;
  max-width: 800px;
}

.container-header {
  width: 100%;
  padding: 0.625rem 0; /* 10px */
  border-bottom: solid 0.0625rem #aaa; /* 1px */
  overflow: hidden;
}

.container-main {
  width: 95%;
  margin: 0.625rem auto; /* 10px */
  overflow: hidden;
  min-height: calc(100vh - 9.9375rem); /* 159px */
}

.container-footer {
  padding: 0.625rem 0; /* 10px */
  border-top: solid 0.0625rem #aaa; /* 1px */
  overflow: hidden;
}

.float-left {
  float: left;
}

.float-right {
  float: right;
}

.float-center {
  text-align: center;
}

.header-info {
  display: block;
  position: relative;
  margin: 0.625rem; /* 10px */
}

.header-info-name {
  font-size: 2em;
  font-weight: bold;
  color: #000;
  margin-right: 0.3125rem; /* 5px */
  word-break: keep-all; /* 한국어 단어 단위 줄바꿈 */
}

.header-info-desc {
  font-size: 0.9em;
  word-break: keep-all; /* 한국어 단어 단위 줄바꿈 */
}

.header-main-nav {
  margin: 0;
  list-style: none;
}

.header-main-nav-item {
  display: block;
  position: relative;
  float: left;
  line-height: 24px;
  margin: 0 10px;
  color: #000;
}

.footer-copyright {
  overflow: hidden;
}

.footer-copyright-text {
  display: block;
  position: relative;
  font-size: 14px;
}

.page-title {
  text-align: left;
}

.page-author {
  display: none;
}

.page-content p {
  line-height: 1.25rem; /* 20px */
}

.page-content img {
  display: block;
  margin: 0.625rem auto; /* 10px */
}

.posts-list-item {
  display: block;
  position: relative;
  line-height: 1.5rem; /* 24px */
  margin: 0.3125rem 0; /* 5px */
  overflow: hidden;
}

.posts-list-item-name {
  width: calc(100% - 100px);
  font-weight: 300;
  color: #000;
}

.list-pagination {
  margin: 1.25rem 0 0.625rem 0; /* 20px 0 10px 0 */
}

.post-title {
  text-align: left;
  margin-top: 1rem; /* 16px */
  margin-bottom: 1rem; /* 16px */
}

.post-created-date {
  margin-bottom: 1rem; /* 16px */
}

.post-content {
  overflow-x: scroll;
}

.post-content p {
  text-align: left;
  word-wrap: break-word;
  overflow-wrap: break-word;
  white-space: normal;
  margin-top: 0.75rem; /* 12px */
  margin-bottom: 0.75rem; /* 12px */
  word-break: keep-all; /* 한국어 단어 단위 줄바꿈 */
  line-height: 1.5rem; /* 24px */
}

.post-content img {
  display: block;
  margin: 0.625rem auto 0.625rem 0; /* 10px auto 10px 0 */
  margin-right: 100%;
}

.post-author {
  display: block;
  margin-bottom: 1rem; /* 16px */
}

.post-info {
  line-height: 1.5rem; /* 24px */
  margin: 0.625rem 0; /* 10px */
}

.post-category,
.post-tag {
  margin: 0 0.3125rem; /* 0 5px */
}

.highlight > pre,
pre.highlight {
  line-height: 1.125rem; /* 18px */
  margin: 0.625rem 0; /* 10px */
  padding-left: 0.1875rem; /* 3px */
  border: 0.0625rem solid #ccc; /* 1px */
  overflow-x: auto;
  font-size: 0.875rem; /* 14px */
  text-indent: 0px;
  background-color: #eee;
  box-shadow: 0.1875rem 0.1875rem rgba(0, 0, 0, 0.1); /* 3px 3px */
}

.highlighter-rouge {
  font-size: 0.875rem; /* 14px */
  background-color: #eee;
}

@media screen and (max-width: 768px) {
  /* reset default styles */
  img {
    width: 100%;
    max-width: 18.75rem; /* 300px */
  }

  /* Posts list */
  .list-pagination {
    margin: 0.625rem 0 0.3125rem 0; /* 10px 0 5px 0 */
  }

  /* Footer */
  .footer-copyright .float-left,
  .footer-copyright .float-right {
    float: none;
  }
}
.print-post-author {
  display: none;
}

@media print {
  /* Header */
  .container-header {
    display: none;
  }

  /* Footer */
  .container-footer {
    display: none;
  }

  /* Post */
  .post-title {
    text-align: center;
  }

  .post-author {
    display: block;
    text-align: center;
  }

  .post-info {
    display: none;
  }

  /* Highlight */
  pre.highlight {
    overflow-x: hidden;
    word-wrap: break-word;
    white-space: pre-wrap;
  }
}
.task-list-item {
  list-style: none;
}

.task-list-item-checkbox {
  position: relative;
  right: 15px;
}

code.language-mermaid {
  display: block;
  text-align: center;
}

/* 전역 스타일 설정 */
html {
  scrollbar-gutter: stable;
}

